Migrated project from 11ty to Gulp.

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 {% extends "layouts/page.html" %}
 
-{% from "components/button.njk" import button %}
-{% from "components/checkbox.njk" import checkbox %}
-{% from "components/input.njk" import input %}
-{% from "components/radio_group.njk" import radio_group %}
-{% from "components/select.njk" import select %}
+{% from "macros/button.html" import button %}
+{% from "macros/checkbox.html" import checkbox %}
+{% from "macros/input.html" import input %}
+{% from "macros/radio_group.html" import radio_group %}
+{% from "macros/select.html" import select %}
 
 {% block content %}
 
